<resources>
    <string name="app_name">Ayn Thor Auto Dim</string>
    <string name="service_name">Auto Dim Service</string>
    <string name="service_desc">Automatically dims the secondary screen after inactivity.</string>
    <string name="permission_required">Overlay permission required</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="enable_service">Enable Accessibility Service</string>
    <string name="service_status_running">Service is Running</string>
    <string name="service_status_stopped">Service is Stopped</string>
    <string name="delay_label">Duration (seconds):</string>
    <string name="save">Save</string>
    <string name="saved_toast">Settings saved</string>
    <string name="opacity_label">Opacity: %d%%</string>
    <string name="true_black_label">True Black Mode</string>
    <string name="true_black_desc">Allows 100% opacity but requires a tap to wake up (blocks the first touch).</string>
    <string name="notification_channel_name">Service Notification</string>
    <string name="notification_title">Auto Dim Service</string>
    <string name="notification_text_running">Service is active</string>
    <string name="notification_text_paused">Service is paused</string>
    <string name="action_pause">Pause</string>
    <string name="action_resume">Resume</string>
</resources>
